fix visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -350,5 +350,6 @@ border: 0;
 overflow: hidden;
 clip: rect(0, 0, 0, 0);
 white-space: nowrap;
+clip-path: inset(100%);
 }
 
